--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 streamlit
-pandas
-numpy
-scikit-learn
+pandas==2.1.0
+numpy==1.26.0
+scikit-learn==1.3.0
+```
+
+Install the specific versions: In your Streamlit environment's terminal, run:
+
+pip install -r requirements.txt
+
